# laser-trim-ai-system

./: .gitignore  BUTTON_STATE_MANAGEMENT_FIX.md  CALCULATION_VALIDATION_REPORT.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_AUDIT_REPORT.md  CRITICAL_BUG_FIXES_SUMMARY.md  DARK_MODE_FIX_SUMMARY.md  DATA_FLOW_FIXES_SUMMARY.md  EXCEL_EXPORT_ANALYSIS.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_TEST_REPORT.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_REPORT.md  Implementation_Progress.py  LAST_CLEANUP_SUMMARY.txt  LICENSE  MANIFEST.in  Multi_Track_Usage_Guide.md  PLAN.md  PROGRESS_LOG.md  README.md  REDESIGN_TRACKER.md  RESPONSIVE_DESIGN_AND_STOP_FUNCTIONALITY_IMPROVEMENTS.md  Session_progress_tracker.py  TEST_RESULTS.md  UI_FIX_SUMMARY.md  VALIDATION_INTEGRATION_SUMMARY.md  ai-powered_qa_system_architecture.py  analyze_project_structure.py  build_installer.bat  chat-based_development_roadmap.py  create_launchers.py  debug_limits.py  deploy.bat  file_version_info.txt  fix_database.bat  git.py  import_analysis_report.json  (+36 more)
.claude/: settings.local.json
.venv_old/: pyvenv.cfg
REFACTORING/: DECISIONS.md  MEASUREMENTS.md  PROGRESS.md  README.md  RISKS.md
_archive_cleanup_20250608_192616/: test_turbo_mode_fixes.py
_archive_cleanup_20250608_195957/: ARCHIVE_SUMMARY.md
_archive_cleanup_20250805_184005/: cleanup_project.py  kill_python_and_clean_db.bat  run_app.bat  run_app.ps1
_archive_dev_files_20250607_184547/: BATCH_PROCESSING_ANALYSIS.md  BATCH_PROCESSING_FIX_SUMMARY.md  simple_comprehensive_test.py
_archive_test_scripts_20250609_204236/: test_plot_basic.py  test_plot_generation.py
_archive_testing_20250611_182848/: test_comprehensive_gui.py
_archive_unused_20250618_071256/: ARCHIVE_UNUSED_FILES_SUMMARY.md
archive/: INDEX.md  v2_main.py
archive/legacy_20250911/_archive_cleanup_20250805_184005/: build_exe.py  package-lock.json  run_dev.py  setup.cfg
archive/legacy_20250911/_archive_cleanup_20250805_184005/_archive_cleanup_20250608_192616/: find_plots.py  test_home_page_refresh.py
archive/legacy_20250911/_archive_cleanup_20250805_184005/_archive_cleanup_20250608_192616/_archive_cleanup_20250608_195957/obsolete_non_ctk_files/: progress_widgets.py
archive/legacy_20250911/_archive_cleanup_20250805_184005/_archive_cleanup_20250608_192616/_archive_dev_files_20250607_184547/: COMPREHENSIVE_TEST_REPORT.md  TEST_EXECUTION_SUMMARY.md  comprehensive_test_script.py
archive/legacy_20250911/_archive_cleanup_20250805_184005/_archive_cleanup_20250608_192616/_archive_dev_files_20250607_184547/docs/: IMPORT_OPTIMIZATION_GUIDE.md
archive/legacy_20250911/_archive_cleanup_20250805_184005/_archive_cleanup_20250608_192616/_archive_test_scripts_20250609_204236/: README.md  comprehensive_validation.py  find_plots.py  verify_plot_integration.py
archive/legacy_20250911/_archive_cleanup_20250805_184005/_archive_cleanup_20250608_192616/_archive_unused_files/src/laser_trim_analyzer/gui/: modern_gui.py
archive/legacy_20250911/_archive_cleanup_20250805_184005/_archive_cleanup_20250608_192616/orphaned_modules/: README_IMPORT_TOOLS.md  ai_analysis.py  async_handler.py  optimize_imports_cli.py  performance_optimizer.py  progress_system.py
archive/legacy_20250911/_archive_cleanup_20250805_184005/_archive_cleanup_20250608_192616/test_scripts/: test_single_file.py  test_sqlalchemy_import.py
archive/legacy_20250911/_archive_cleanup_20250805_184005/_archive_unused_20250618_071256/examples/: database_performance_optimization.py  import_optimization_demo.py
archive/legacy_20250911/_archive_cleanup_20250805_184005/_archive_unused_20250618_071256/tests/: test_progress_system.py
archive/legacy_20250911/_archive_cleanup_20250805_184005/batch_test/: batch_test_batch_fixed_summary.json
archive/legacy_20250911/_archive_cleanup_20250805_184005/docs/: APPLICATION_TEST_REPORT.md  FINAL_TEST_CHECKLIST.md  ML_SETUP.md  PRODUCTION_CODEBASE_AUDIT.md  ROOT_CAUSE_ANALYSIS.md
archive/legacy_20250911/_archive_cleanup_20250805_184005/examples/: cache_usage_example.py
archive/legacy_20250911/_archive_cleanup_20250805_184005/scripts/: diagnose_8340_export.py  init_dev_database.py  test_all_pages.py  test_page_structure.py  verify_sigma_calculation.py
archive/legacy_20250911/_archive_cleanup_20250805_184005/tests/: test_app_functionality.py  test_cancellation.py  test_performance_validation.py
config/: default.yaml  default_config.json  default_config.yaml  deployment.yaml  development.yaml  production.yaml
core/: __init__.py  config.py  data_loader.py  data_processor.py  data_processor_adapter.py
database/: __init__.py  data_migrator.py  database_manager.py  historical_analyzer.py  trend_reporter.py
docs/: BROKEN_FEATURES_INVENTORY.md  CHART_THEME_FIX_SUMMARY.md  COMPLETE_CHART_FIX_SUMMARY.md  DEFERRED_REFACTORING.md  DRAG_AND_DROP_FIX.md  FEATURE_ACTIVE_MODELS.md  HISTORICAL_PAGE_ANALYTICS_FIX.md  LARGE_SCALE_PROCESSING.md  Launcher_guide.md  MEMORY_USAGE_FIX.md  ML_MODELS_DOCUMENTATION.md  ML_PROGRESS.md  ML_REDESIGN_PLAN.md  OPERATIONAL_PRIORITY_MATRIX.md  PRODUCTION_CODE_STANDARDS.md  PRODUCTION_ERROR_MATRIX.md  SESSION_2025-12-27.md  SESSION_2025-12-31.md  SESSION_2026-04-20.md  UPGRADE_PLAN_V4.md  UPGRADE_TRACKER.md  analytics_engine_docs.md  database_integration_guide.md  format-mapping.md  gui_README.md
examples/: basic_usage.py  example_excel_reporter.py  example_usage.py  integration_example.py  ml_example_usage.py  validate_installation.py
excel_reporter/: __init__.py  excel_report_adapter.py  excel_reporter.py
gui/: gui_application.py
integration/: laser_trim_orchestrator.py
ml_models/: __init__.py  ml_analyzer_adapter.py  ml_models.py
scripts/: add_raw_data_columns.py  benchmark_processing.py  check_ml_training_data.py  deploy.py  find_8340_duplicates.py  fix_database_enums.py  fix_risk_category_enum.py  fix_smoothness_tracks.py  init_dev_database.py  investigate_8340_batch_save.py  test_backend.py
src/: __init__.py  __main__.py  config.py  constants.py  test_excel_processing.py
test_data/: model_summary_8340-1_20250708_201416.xlsx
(+1218 files in other folders)
