# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laser-trim-analyzer"
version = "2.2.7"
description = "Modern QA analysis platform for potentiometer laser trim data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@company.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Quality Control",
]

dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "pyarrow>=14.0.0",  # Parquet support

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "Pillow>=10.0.0",  # Image processing

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",

    # ML/Scientific
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "joblib>=1.3.0",  # Model serialization

    # GUI
    "customtkinter>=5.2.0",
    "ttkthemes>=3.2.0",
    "tkinterdnd2>=0.3.0",  # Drag and drop support

    # API
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "tenacity>=8.2.0",

    # Utilities
    "pyyaml>=6.0",
    "rich>=13.0.0",  # Better console output
    "click>=8.1.0",   # CLI interface
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",  # System monitoring
    "watchdog>=3.0.0",  # File monitoring
    "python-dateutil>=2.8.2",  # Date parsing
    "filelock>=3.12.0",  # File locking

    # Performance & Caching
    "diskcache>=5.6.0",  # Persistent caching
    "h5py>=3.9.0",  # HDF5 support
    "zarr>=2.16.0",  # Zarr support
    "memory-profiler>=0.61.0",  # Memory profiling

    # Security
    "cryptography>=41.0.0",  # Secure tokens
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "ipykernel>=6.25.0",  # For Jupyter support
    "notebook>=7.0.0",
]

ml-advanced = [
    "tensorflow>=2.13.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "optuna>=3.3.0",  # Hyperparameter optimization
]

performance = [
    "line-profiler>=4.1.0",  # Line-by-line profiling
    "py-spy>=0.3.14",  # Sampling profiler
    "scalene>=1.5.0",  # CPU+GPU+memory profiler
]

all = [
    "laser-trim-analyzer[dev,ml-advanced,performance]",
]

[project.scripts]
laser-trim-analyzer = "laser_trim_analyzer.__main__:main"
lta = "laser_trim_analyzer.cli:cli"

[project.gui-scripts]
laser-trim-analyzer-gui = "laser_trim_analyzer.gui.main_window:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
laser_trim_analyzer = ["py.typed", "*.yaml", "*.json"]

# Tool configurations
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]  # line too long

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "asyncio: mark test as an asyncio test",
    "slow: mark test as slow running",
    "integration: mark test as integration test", 
    "performance: mark test as performance test",
    "ui: mark test as UI test"
]
python_files = ["test_*.py", "*_test.py"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
