# setup.cfg
[metadata]
name = laser-trim-analyzer
version = 2.0.0
author = Your Name
author_email = your.email@company.com
description = Modern QA analysis platform for potentiometer laser trim data
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/yourcompany/laser-trim-analyzer
project_urls =
    Bug Tracker = https://github.com/yourcompany/laser-trim-analyzer/issues
    Documentation = https://laser-trim-analyzer.readthedocs.io
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Manufacturing
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Quality Control
    Topic :: Software Development :: Quality Assurance

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires = file: requirements.txt
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
laser_trim_analyzer = 
    *.yaml
    *.json
    py.typed
    configs/*.yaml
    configs/*.json
    templates/*
    static/*

[options.entry_points]
console_scripts =
    laser-trim-analyzer = laser_trim_analyzer.__main__:main
    lta = laser_trim_analyzer.cli:cli
gui_scripts =
    laser-trim-analyzer-gui = laser_trim_analyzer.gui.main_window:main

[options.extras_require]
dev = 
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-asyncio>=0.21.0
    pytest-mock>=3.11.0
    black>=23.0.0
    ruff>=0.1.0
    mypy>=1.7.0
    pre-commit>=3.5.0
    ipykernel>=6.25.0
    notebook>=7.0.0

ml-advanced = 
    tensorflow>=2.13.0
    torch>=2.0.0
    transformers>=4.30.0
    optuna>=3.3.0

performance = 
    line-profiler>=4.1.0
    py-spy>=0.3.14
    scalene>=1.5.0

all = 
    %(dev)s
    %(ml-advanced)s
    %(performance)s

[bdist_wheel]
universal = 0

[sdist]
formats = gztar